tests/compile_fail/handle_scope_escape_to_nowhere.stderr
error[E0277]: the trait bound `Locker: v8::scope::param::NewEscapableHandleScope<'_, '_>` is not satisfied
   --> tests/compile_fail/handle_scope_escape_to_nowhere.rs:5:50
    |
5   |   let mut _scope = v8::EscapableHandleScope::new(&mut isolate);
    |                    ----------------------------- ^^^^^^^^^^^^ the trait `v8::scope::param::NewEscapableHandleScope<'_, '_>` is not implemented for `Locker`
    |                    |
    |                    required by a bound introduced by this call
    |
note: required by `EscapableHandleScope::<'s, 'e>::new`
   --> src/scope.rs
    |
    | /   pub fn new<P: param::NewEscapableHandleScope<'s, 'e>>(
    | |     param: &'s mut P,
    | |   ) -> P::NewScope {
    | |__________________^

error[E0277]: the trait bound `Locker: v8::scope::param::NewEscapableHandleScope<'_, '_>` is not satisfied
 --> tests/compile_fail/handle_scope_escape_to_nowhere.rs:5:20
  |
5 |   let mut _scope = v8::EscapableHandleScope::new(&mut isolate);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `v8::scope::param::NewEscapableHandleScope<'_, '_>` is not implemented for `Locker`
